compiler/src/test/resources/amyc/nameAnalyzer/passing/ConstructorVsIdPattern.amy
module ConstructorVsId
  abstract class Foo
  case class Bar() : Foo
  fn foo(f: Foo): Int = {
    f match {
      case Bar() => 42
      case Bar => 42
    }
  }
end ConstructorVsId
