compiler/src/test/resources/amyc/nameAnalyzer/failing/UndefinedConstructor1.amy
object Constructor
  abstract class Foo
  fn foo(): Foo = { Bar(42) }
end Constructor
